# rust-restful-example

./: .gitignore  Cargo.toml  README.md  dockerfile
res/: config.yaml
src/: main.rs
src/app/: mod.rs
src/app/cli/: mod.rs
src/app/config/: mod.rs
src/app/constants/: collection.rs  database.rs  mod.rs
src/app/controller/: api_auth.rs
src/app/dao/: api_auth.rs
src/app/entity/: api_auth_info.rs  mod.rs
src/app/module/api_auth/: mod.rs
src/app/module/api_auth/controller/: mod.rs
src/app/module/api_auth/dao/: mod.rs
src/app/module/api_auth/entity/: mod.rs
src/app/module/api_auth/service/: mod.rs
src/app/service/: api_auth.rs  mod.rs
