[package]
name = "rust-restful-example"
version = "0.1.0"
authors = ["BlankZhu <z707310837@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.5"
env_logger = "0.8.3"
chrono = { version = "0.4", features = ["serde"]}
clap = "3.0.0-beta.2"
futures = "0.3"
log = "0.4"
mongodb = "2.0.0-beta"
rand = "0.8"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
tokio = { version = "1.4.0", features = ["time"] }
uuid = "0.8"